--- a/USABLE_finochietto_.ipynb
+++ b/USABLE_finochietto_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPgVwfuB0psNgQ5T9WcNpmx",
+      "authorship_tag": "ABX9TyOeqjQFcPYE4wiXNIblevdx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,9 @@
         "import spacy\n",
         "sp = spacy.load('es_core_news_sm')\n",
         "import matplotlib.pyplot as plt\n",
+        "# counter unipalabras con quitador de stopwords\n",
+        "from spacy.lang.es import stop_words as es_stop_words\n",
+        "counter1 = CountVectorizer(stop_words= list(es_stop_words.STOP_WORDS))\n",
         "\n"
       ],
       "metadata": {
@@ -62,6 +65,7 @@
     {
       "cell_type": "code",
       "source": [
+        "%%capture\n",
         "dic_ene_24 = input(\"copie y pegue aqui las observaciones de la planilla 1:\")\n",
         "ene_feb_24 = input(\"copie y pegue aqui las observaciones de la planilla 2:\")\n",
         "feb_mar_24 = input(\"copie y pegue aqui las observaciones de la planilla 3:\")\n",
@@ -81,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DjBQBWRat7EI",
-        "outputId": "304f3179-a8da-4997-eb63-91837ae9ba8f"
+        "outputId": "04ecfd8a-524d-4a64-e415-02db191e7c83"
       },
       "execution_count": 2,
       "outputs": [
@@ -131,9 +135,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# counter unipalabras con quitador de stopwords\n",
-        "from spacy.lang.es import stop_words as es_stop_words\n",
-        "counter1 = CountVectorizer(stop_words= list(es_stop_words.STOP_WORDS))\n",
         "\n",
         "nombre = []\n",
         "virt = []\n",
@@ -225,9 +226,9 @@
           "height": 125
         },
         "id": "NW9rkA2UdEOB",
-        "outputId": "e6ba4995-7dcf-4a62-c03b-a8a50a7e6832"
+        "outputId": "0bf7f279-8202-4042-8222-12a2d3620b27"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -239,7 +240,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-56c358b7-9a2c-4f4e-a372-6d9c98f6fcce\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c2b9b5ed-8eab-425a-8d31-b8906bc83249\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -279,7 +280,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56c358b7-9a2c-4f4e-a372-6d9c98f6fcce')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c2b9b5ed-8eab-425a-8d31-b8906bc83249')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -331,12 +332,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-56c358b7-9a2c-4f4e-a372-6d9c98f6fcce button.colab-df-convert');\n",
+              "        document.querySelector('#df-c2b9b5ed-8eab-425a-8d31-b8906bc83249 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-56c358b7-9a2c-4f4e-a372-6d9c98f6fcce');\n",
+              "        const element = document.querySelector('#df-c2b9b5ed-8eab-425a-8d31-b8906bc83249');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -356,8 +357,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c7b58f4b-b52c-45a3-ae5b-42fa36b0353e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c7b58f4b-b52c-45a3-ae5b-42fa36b0353e')\"\n",
+              "<div id=\"df-da0f8bcb-3bb1-411b-83cb-dc304e8c5c85\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-da0f8bcb-3bb1-411b-83cb-dc304e8c5c85')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -476,14 +477,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c7b58f4b-b52c-45a3-ae5b-42fa36b0353e button');\n",
+              "        document.querySelector('#df-da0f8bcb-3bb1-411b-83cb-dc304e8c5c85 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_77a15fe4-cfef-4182-a48f-eb7b5485b437\">\n",
+              "  <div id=\"id_9e23bd4c-718e-4722-a3b0-3d2bf872def6\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -527,7 +528,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_77a15fe4-cfef-4182-a48f-eb7b5485b437 button.colab-df-generate');\n",
+              "        document.querySelector('#id_9e23bd4c-718e-4722-a3b0-3d2bf872def6 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -586,9 +587,9 @@
         },
         "collapsed": true,
         "id": "XBDDyHRwoJP0",
-        "outputId": "23d72fce-a45c-490a-edc1-8605f78bc29a"
+        "outputId": "a6e5e10a-4cd3-46a2-ab58-3306fc869a45"
       },
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
