--- a/USABLE_finochietto_.ipynb
+++ b/USABLE_finochietto_.ipynb
@@ -86,7 +86,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DjBQBWRat7EI",
-        "outputId": "ed964312-d9f7-40b4-bf0c-d5671bfeef18"
+        "outputId": "ed964312-d9f7-40b4-bf0c-d5671bfeef18",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -664,7 +665,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OnHaZnfZTW-E",
-        "outputId": "aab4f7ff-578a-4b0f-a583-3648a45ace04"
+        "outputId": "aab4f7ff-578a-4b0f-a583-3648a45ace04",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
